--- a/economies.css
+++ b/economies.css
@@ -11,13 +11,17 @@ body{
 
 }
 
+a{
+  text-decoration: none;
+
+}
+
 
 .card{
   width: 300px;
   margin: 0 50px 50px 50px;
   text-align: center;
-  height: 360px;
-  padding-top: 20px;
+  padding: 20px 0 50px 0;
   border-radius: 50px;
   border-color: white;
   border-style: solid;
@@ -123,4 +127,47 @@ font-family: 'Open Sans', sans-serif;
 /* Hide the link that should open and close the topnav on small screens */
 .topnav .icon {
   display: none;
+}
+
+
+
+
+
+
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+  .logo{
+    position:fixed;
+    z-index: 100;
+    width: 120px;
+    bottom: 20px;
+    right: 20px;
+  }
+
+  .card{
+    width: 90%;
+    margin: 50px 0;
+
+
 }
