--- a/economies.css
+++ b/economies.css
@@ -73,6 +73,16 @@ text-align: center;
 }
 
 
+.headone{
+  margin: 0 auto 0 auto;
+  color: white;
+  font-size: 2rem;
+  width: 80%;
+  font-weight: normal;
+font-family: 'Open Sans', sans-serif;
+text-align: center;
+}
+
 
 .flexbox{
   display: flex;
