--- a/leader.css
+++ b/leader.css
@@ -29,6 +29,15 @@ a{
   background-color:  rgba(0, 0, 0, .4)
 }
 
+
+.card12{
+  margin: 0 50px 50px 50px;
+  text-align: center;
+  padding: 20px 0 50px 0;
+  overflow: hidden;
+  background-color:  rgba(0, 0, 0, .4)
+}
+
 .cardimg{
   position: relative;
   height: 50%;
@@ -177,6 +186,20 @@ font-family: 'Open Sans', sans-serif;
   .card{
     width: 90%;
     margin: 50px 0;
+}
+
+.card12{
+  margin: 0;
+  text-align: center;
+  padding: 20px 0 50px 0;
+  overflow: hidden;
+  background-color:  rgba(0, 0, 0, .4)
+}
+
+.img1{
+  width: 100%;
+  margin-top: 10px;
+}
 
 
 }
