--- a/learn.css
+++ b/learn.css
@@ -116,7 +116,7 @@ font-family: 'Open Sans', sans-serif;
 {
   position:relative;
   width:250px;
-  background:linear-gradient(0deg,#1b1b1b,#222,#1b1b1b);
+  background:linear-gradient(0deg,black,black,black);
   display:flex;
   justify-content:center;
   align-items:center;
