--- a/homepage.css
+++ b/homepage.css
@@ -11,6 +11,75 @@ body{
 
 }
 
+.svg{
+  position: relative;
+  left: 50%;
+  transform: translate(-50%);
+  width: 300px;
+  margin:20px auto 0 auto;
+     animation: ss 1s ease-out 3s forwards;
+}
+
+@keyframes ss {
+from{opacity: 1;}
+  to{opacity: 0;}
+}
+
+.svg path:nth-child(3){
+ stroke-dasharray: 700px;
+ stroke-dashoffset: 700px;
+     animation: StartUpSequenceanimation 2.5s ease-out 1s forwards;
+}
+
+.svg path:nth-child(4){
+ stroke-dasharray:400px;
+ stroke-dashoffset: 400px;
+     animation: StartUpSequenceanimation 2.5s ease-out 1s forwards;
+}
+.svg path:nth-child(5){
+ stroke-dasharray: 200px;
+ stroke-dashoffset: 200px;
+     animation: StartUpSequenceanimation 2.5s ease-out 1s forwards;
+}
+.svg path:nth-child(6){
+ stroke-dasharray: 250px;
+ stroke-dashoffset: 250px;
+     animation: StartUpSequenceanimation 2.5s ease-out 1s forwards;
+}
+.svg path:nth-child(7){
+ stroke-dasharray: 200px;
+ stroke-dashoffset: 200px;
+     animation: StartUpSequenceanimation 2.5s ease-out 1s forwards;
+}
+
+.svg path:nth-child(8){
+ stroke-dasharray: 500px;
+ stroke-dashoffset: 500px;
+     animation: StartUpSequenceanimation 2.5s ease-out 1s forwards;
+}
+
+.svg path:nth-child(9){
+ stroke-dasharray: 400px;
+ stroke-dashoffset: 400px;
+     animation: StartUpSequenceanimation 2.5s ease-out 1s forwards;
+}
+
+
+
+@keyframes StartUpSequenceanimation {
+    to{stroke-dashoffset:0;}
+}
+
+
+
+
+
+
+
+
+
+
+
 .logo{
   position:fixed;
   z-index: 100;
