--- a/leader.css
+++ b/leader.css
@@ -186,6 +186,7 @@ font-family: 'Open Sans', sans-serif;
   .card{
     width: 90%;
     margin: 50px 0;
+  padding: 20px 10px 50px 10px;
 }
 
 .card12{
